added akigassyuku image

--- a/2015.html
+++ b/2015.html
@@ -177,6 +177,16 @@
             <div class="col-md-4">
               <div class="light-box box-hover">
                 <h2>
+                  <a href="https://goo.gl/photos/w3ZV5grRawzuJKRf8">
+                    <img src="2015/aki.jpg">
+                  </a>
+                </h2>
+                <p>秋合宿 (2015/10/11,12)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
                   <a href="https://goo.gl/photos/jKkYVUDXB2oEsrrn6">
                     <img src="2015/beginer.jpg">
                   </a>
