新歓コンパ　追加

--- a/2015.html
+++ b/2015.html
@@ -77,6 +77,16 @@
             <div class="col-md-4">
               <div class="light-box box-hover">
                 <h2>
+                  <a href="https://goo.gl/photos/M8dNaZquP3M8cJV57">
+                    <img src="2015/konpa.jpg">
+                  </a>
+                </h2>
+                <p>新歓コンパ</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
                   <a href="https://photos.google.com/share/AF1QipP519BZu49ry57g2af_3v_cyreHedgSl3gcy-kYDzcZaBB9B_TAjWTYAUnt-qfi9w?key=UWxiS2dhajBEcHYxeURReW1VNEFBOFBENUZGY0RR">
                     <img src="2015/meidaisai.jpg">
                   </a>
