--- a/2015.html
+++ b/2015.html
@@ -214,6 +214,16 @@
                 <p>クリコン (2015/12/12)</p>
               </div>
             </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://goo.gl/photos/wpysLt4J2mzv5prDA">
+                    <img src="2015/huyu.jpg">
+                  </a>
+                </h2>
+                <p>冬合宿 (2016/2/28, 29, 3/1)</p>
+              </div>
+            </div>
           </div>
           <div class="row">
             <div class="col-md-12">
