--- a/2015.html
+++ b/2015.html
@@ -197,7 +197,7 @@
             <div class="col-md-4">
               <div class="light-box box-hover">
                 <h2>
-                  <a href="https://goo.gl/photos/jKkYVUDXB2oEsrrn6">
+                  <a href="https://goo.gl/photos/2EKQMgCWBDxWZHA38">
                     <img src="2015/beginer.jpg">
                   </a>
                 </h2>
@@ -222,6 +222,16 @@
                   </a>
                 </h2>
                 <p>冬合宿 (2016/2/28, 29, 3/1)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://goo.gl/photos/gC4c7UPyFzv6fNLA9">
+                    <img src="2015/cyukyou.jpg">
+                  </a>
+                </h2>
+                <p>2016年 中京大学卒業式</p>
               </div>
             </div>
           </div>
