追いコン追加

--- a/2015.html
+++ b/2015.html
@@ -235,7 +235,17 @@
                     <img src="2015/cyukyou.jpg">
                   </a>
                 </h2>
-                <p>2016年 中京大学卒業式</p>
+                <p>2015年度 卒業式</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://goo.gl/photos/3YHSHNezpBHkUWLv5">
+                    <img src="2015/oikon.jpg">
+                  </a>
+                </h2>
+                <p>追いコン (2016/3/12)</p>
               </div>
             </div>
           </div>
