--- a/2016.html
+++ b/2016.html
@@ -88,6 +88,26 @@
                 <p>合同説明会 (2016/4/11)</p>
               </div>
             </div>
+           <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://goo.gl/photos/4iE84u8yx8rX8bYU6">
+                    <img src="2016/sinkankonpa.jpg">
+                  </a>
+                </h2>
+                <p>新刊コンパ (2016/4/23)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://goo.gl/photos/PmU61tFLG549XpiS7">
+                    <img src="2016/bbq.jpg">
+                  </a>
+                </h2>
+                <p>新歓BBQ (2016/5/3)</p>
+              </div>
+            </div>
             <div class="col-md-4">
               <div class="light-box box-hover">
                 <h2>
@@ -96,6 +116,16 @@
                   </a>
                 </h2>
                 <p>新歓合宿 (2015/5/14,15)</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="light-box box-hover">
+                <h2>
+                  <a href="https://goo.gl/photos/bNjdrPuGQ59BQ44Y9">
+                    <img src="2016/sinkan2.jpg">
+                  </a>
+                </h2>
+                <p>新歓合宿2 (2015/5/14,15)</p>
               </div>
             </div>
           </div>
