--- a/2016.html
+++ b/2016.html
@@ -128,6 +128,26 @@
                 <p>新歓合宿2 (2015/5/14,15)</p>
               </div>
             </div>
+            <div class='col-md-4'>
+              <div class='light-box box-hover'>
+                <h2>
+                  <a href='https://goo.gl/photos/Ek54scQxXoCem9wy6'>
+                    <img src='2016/natu1.jpg'>
+                  </a>
+                </h2>
+                <p>夏合宿1 (2016/8/29-9/1)</p>
+              </div>
+            </div>
+            <div class='col-md-4'>
+              <div class='light-box box-hover'>
+                <h2>
+                  <a href='https://goo.gl/photos/JVwVejx9g2SbTNQK9'>
+                    <img src='2016/natu2.jpg'>
+                  </a>
+                </h2>
+                <p>夏合宿2 (2016/8/29-9/1)</p>
+              </div>
+            </div>
           </div>
           <div class="row">
             <div class="col-md-12">
