夏合宿3を追加

--- a/2016.html
+++ b/2016.html
@@ -148,6 +148,16 @@
                 <p>夏合宿2 (2016/8/29-9/1)</p>
               </div>
             </div>
+            <div class='col-md-4'>
+              <div class='light-box box-hover'>
+                <h2>
+                  <a href='https://goo.gl/photos/8bdHPZ1CdydNkQHt7'>
+                    <img src='2016/natu3.jpg'>
+                  </a>
+                </h2>
+                <p>夏合宿3 (2016/8/29-9/1)</p>
+              </div>
+            </div>
           </div>
           <div class="row">
             <div class="col-md-12">
