夏合宿2016を追加

--- a/2016.html
+++ b/2016.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>2015年度アルバム | 名大テニスサークルPOLLUX</title>
+      <title>2016年度アルバム | 名大テニスサークルPOLLUX</title>
       <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -146,6 +146,16 @@
                   </a>
                 </h2>
                 <p>夏合宿2 (2016/8/29-9/1)</p>
+              </div>
+            </div>
+            <div class='col-md-4'>
+              <div class='light-box box-hover'>
+                <h2>
+                  <a href='https://goo.gl/photos/8bdHPZ1CdydNkQHt7'>
+                    <img src='2016/natu3.jpg'>
+                  </a>
+                </h2>
+                <p>夏合宿3 (2016/8/29-9/1)</p>
               </div>
             </div>
           </div>
