edit oikon image

--- a/2016.html
+++ b/2016.html
@@ -262,7 +262,7 @@
               <div class='light-box box-hover'>
                 <h2>
                   <a href='https://goo.gl/photos/jvR67H5WUNK2ByFy9'>
-                    <img src='2016/poruhai.jpg'>
+                    <img src='2016/oikon.jpg'>
                   </a>
                 </h2>
                 <p>追いコン (2017/3/18)</p>
