--- a/2016.html
+++ b/2016.html
@@ -291,6 +291,30 @@
               </div>
             </div>
 
+            <div class="col-md-12">
+              <h2>2016年度追いコン動画</h2>
+
+              <div class="row">
+                  <div class="col-xs-12 col-md-6" style='padding: 20'>
+                    <div style="position:relative;width:100%;padding: 75% 0 0 0;margin: 0 auto;">
+                      <iframe src="https://player.vimeo.com/video/234797205" width="640" height="480" frameborder="0"
+                        webkitallowfullscreen mozallowfullscreen allowfullscreen
+                        style="position:absolute;top:0;left:0;width:100%;height:100%;border:none;">
+                      </iframe>
+                    </div>
+                  </div>
+
+                  <div class="col-xs-12 col-md-6" style='padding: 20'>
+                    <div style="position:relative;width:100%;padding: 75% 0 0 0;margin: 0 auto;">
+                      <iframe src="https://player.vimeo.com/video/234797155" width="640" height="480" frameborder="0"
+                        webkitallowfullscreen mozallowfullscreen allowfullscreen
+                        style="position:absolute;top:0;left:0;width:100%;height:100%;border:none;">
+                      </iframe>
+                    </div>
+                  </div>
+              </div>
+            </div>
+
           </div>
           <div class="row">
             <div class="col-md-12">
