--- a/2015.html
+++ b/2015.html
@@ -258,12 +258,12 @@
                 <p>春一 (2016/3/26,28)</p>
               </div>
             </div>
-            <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
+<!--             <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
               <h2>2015年度追いコン動画</h2>
               <div style="position:relative;width:100%;padding: 75% 0 0 0;margin: 0 auto;">
                 <iframe src="https://drive.google.com/file/d/0B6zILNufH2jrT2xCbWdjYmVSenM/preview" width="640" height="480" style="position:absolute;top:0;left:0;width:100%;height:100%;border:none;"></iframe>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="row">
             <div class="col-md-12">
