--- a/2016.html
+++ b/2016.html
@@ -290,7 +290,7 @@
                 <p>名工/愛工 卒業式 (2017/3/23)</p>
               </div>
             </div>
-
+<!--
             <div class="col-md-12">
               <h2>2016年度追いコン動画</h2>
 
@@ -313,7 +313,7 @@
                     </div>
                   </div>
               </div>
-            </div>
+            </div> -->
 
           </div>
           <div class="row">
